refactor : LottoSystem